Fix white-space appearance with wrapping.

--- a/puzzles-frontend/src/app/components/puzzle-game/puzzle-game.component.css
+++ b/puzzles-frontend/src/app/components/puzzle-game/puzzle-game.component.css
@@ -123,7 +123,7 @@ button:hover {
 }
 
 .preserve-newline {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 @media only screen and (max-width: 1024px) {
